--- a/3D Design/index.html
+++ b/3D Design/index.html
@@ -180,21 +180,21 @@
     <!-- Rainfall Insight -->
     <div class="insight-card">
       <i class="fas fa-cloud-rain"></i>
-      <div class="number" >0</div>
+      <div class="number" >Enter Data</div>
       <p>Chance of Rain (%)</p>
     </div>
     
     <!-- Temperature Insight -->
     <div class="insight-card">
       <i class="fas fa-thermometer-half"></i>
-      <div class="number" >0</div>
+      <div class="number" >Enter Data</div>
       <p>Avg Temperature (°C)</p>
     </div>
     
     <!-- Wind Insight -->
     <div class="insight-card">
       <i class="fas fa-wind"></i>
-      <div class="number" >0</div>
+      <div class="number" >Enter Data</div>
       <p>Wind Speed (m/s)</p>
     </div>
 
