--- a/3D Design/index.html
+++ b/3D Design/index.html
@@ -261,7 +261,7 @@
     <div class="team-members">
       <h3>Team Members</h3>
       <ul>
-        <li><a href="#" target="_blank">Mahmoud Khaled</a></li>
+        <li><a href="https://www.linkedin.com/in/mahmoud-khaled-757644281/" target="_blank">Mahmoud Khaled</a></li>
         <li><a href="#" target="_blank">Mohamed Mostafa</a></li>
         <li><a href="#" target="_blank">Hamed Islam</a></li>
         <li><a href="#" target="_blank">Ahmed Khaled</a></li>
