--- a/3D Design/index.html
+++ b/3D Design/index.html
@@ -239,7 +239,7 @@
     <div class="footer-links">
       <h3>Resources</h3>
       <ul>
-        <li><a href="https://github.com/your-repo" target="_blank">GitHub Repo</a></li>
+        <li><a href="https://github.com/Real-mahmoud/nasa-test" target="_blank">GitHub Repo</a></li>
         <li><a href="https://power.larc.nasa.gov/" target="_blank">NASA POWER API</a></li>
         <li><a href="https://climateknowledgeportal.worldbank.org/" target="_blank">World Bank Climate Data</a></li>
         <li><a href="#" target="_blank">Youtube Tutorials</a></li>
