--- a/3D Design/index.html
+++ b/3D Design/index.html
@@ -17,7 +17,7 @@
     <!-- chart  -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
      
-    <title>Document</title>
+    <title>Weather Probability</title>
 </head>
 <body>
 
@@ -242,8 +242,8 @@
         <li><a href="https://github.com/Real-mahmoud/nasa-test" target="_blank">GitHub Repo</a></li>
         <li><a href="https://power.larc.nasa.gov/" target="_blank">NASA POWER API</a></li>
         <li><a href="https://climateknowledgeportal.worldbank.org/" target="_blank">World Bank Climate Data</a></li>
-        <li><a href="#" target="_blank">Youtube Tutorials</a></li>
-        <li><a href="#" target="_blank">AI Tools</a></li>
+        <li><a href="https://youtube.com/playlist?list=PLRqwX-V7Uu6YxDKpFzf_2D84p0cyk4T7X&si=LD9DDLYTJCK89I6E" target="_blank">Youtube Tutorials</a></li>
+        <li><a href="https://chatgpt.com/" target="_blank">AI Tools</a></li>
         
       </ul>
     </div>
